# FastSecDecPathFinder

./: .gitignore  FSD.py  LICENSE  README.md  U_dualization_slowdown.py  benchmark.py  boundary_test.py  cache_generation_project.md  cache_utils.py  cache_warm.py  definitions.py  dot_parser.py  dot_topology.py  evaluator_utils.py  exhaustive_README.md  flake.nix  formatting.py  generate_four_loop.py  generation_timing.py  install.sh  integrand.py  integrator.py  jit_compile_MRE.py  prepared_bundle.py  pyproject.toml  pysecdec_bridge.py  qmc_lattice.py  requirements.txt  result_io.py  run_with_memory_watch.py  runtime_benchmark.py  sectors_generator.py  subtraction_formula.py  summary.md  utils.py
PSD2_runtime_experiment/: description_and_results.md  psd2_runtime_experiment.py
docs/: FastSecDec.tex  performance.md  triple_box_mardown.md  universal_cache.md  universal_cache_report.json  universal_cache_report_ibp.json  validation.md
normaliz_tmp_28960/: normaliz.in  run_info
scripts/: compare_qmc_pysecdec.py  drain_nonowner_cache_workers.py  guard_chain_rule_expression_checkpoint.py  inspect_subtraction_cache.py  kill_pids_from_file.sh  launch_fsd_cache_3l.sh  launch_fsd_cache_3l_tuned_resume.sh  launch_protected_chain_rule_resume.sh  monitor_cache_status.sh  profile_prepared_sector_batch.py  protect_chain_rule_checkpoint_memory.py  relaunch_cache_3l_on_exit.sh  release_cache_drain_after_checkpoint.py  report_cache_run_status.py  restart_cache_after_chain_rule_checkpoint.py  resume_full_cache_after_formula_json.sh  run_cache_shards.py  scan_pending_chain_signatures.py  (+3 more)
(+574 files in other folders)
